--- a/Taller 1/Taller 1 Herramientas.ipynb
+++ b/Taller 1/Taller 1 Herramientas.ipynb
@@ -215,11 +215,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cuando X toma el valor de 650, Y toma el valor de 3.00.\n",
+      "Cuando X toma el valor de 580, Y toma el valor de 17.33.\n",
+      "Cuando X toma el valor de 461, Y toma el valor de 25.66.\n"
+     ]
+    }
+   ],
    "source": [
-    "#Solve Item 3 Here, add more python cells if needed"
+    "import numpy as np\n",
+    "from scipy.interpolate import interp1d\n",
+    "\n",
+    "Y = [0, 6, 12, 20, 26]\n",
+    "X = [655, 645, 620, 560, 455]\n",
+    "\n",
+    "valores = [650, 580, 461]\n",
+    "\n",
+    "funcion = interp1d(X, Y, kind='linear', fill_value='extrapolate')\n",
+    "resultados = funcion(valores)\n",
+    "\n",
+    "i = 0\n",
+    "while i < len(valores):\n",
+    "    print(\"Cuando X toma el valor de {}, Y toma el valor de {:.2f}.\".format(valores[i], resultados[i]))\n",
+    "    i += 1"
    ]
   },
   {
