--- a/Taller 1/Taller 1 Herramientas.ipynb
+++ b/Taller 1/Taller 1 Herramientas.ipynb
@@ -308,7 +308,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Solve Item 5 Here, add more python cells if needed"
+    "import numpy as np\n",
+    "from numpy.linalg import solve\n",
+    "from math import sin, cos, radians\n",
+    "\n",
+    "L = 15\n",
+    "\n",
+    "ca = cos(radians(2.92))\n",
+    "sa = sin(radians(2.92))\n",
+    "cb = cos(radians(33.8))\n",
+    "sb = sin(radians(33.8))\n",
+    "s1 = sin(radians(47.9))\n",
+    "c1 = cos(radians(47.9))\n",
+    "s2 = sin(radians(78.8))\n",
+    "c2 = cos(radians(78.8))\n",
+    "\n",
+    "# Construir sistema lineal\n",
+    "A = np.array([\n",
+    "    [-ca, -sb],\n",
+    "    [-sa,  cb]\n",
+    "])\n",
+    "\n",
+    "b = np.array([\n",
+    "    0.601 * L * s1 - 1.02 * L * c2,\n",
+    "    0.601 * L * c1 + 1.02 * L * s2\n",
+    "])\n",
+    "\n",
+    "# Resolver\n",
+    "A_val, B_val = solve(A, b)\n",
+    "\n",
+    "# Mostrar resultados\n",
+    "print(f\"Fuerza A ≈ {A_val:.2f} N\")\n",
+    "print(f\"Fuerza B ≈ {B_val:.2f} N\")\n"
    ]
   },
   {
@@ -344,7 +375,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#ncnoja"
+    "import numpy as np\n",
+    "from scipy.optimize import minimize_scalar\n",
+    "\n",
+    "def s_plastico(e):\n",
+    "    return 26202 * e**3 - 11347 * e**2 + 1332 * e + 78\n",
+    "\n",
+    "res = minimize_scalar(lambda e: -s_plastico(e), bounds=(0, 1), method='bounded')\n",
+    "\n",
+    "\n",
+    "e_max = res.x\n",
+    "s_ultimo = s_plastico(e_max)\n",
+    "\n",
+    "print(f\"Deformación donde ocurre el esfuerzo último: ε ≈ {e_max:.4f}\")\n",
+    "print(f\"Esfuerzo último: σ_último ≈ {s_ultimo:.2f} MPa\")\n"
    ]
   },
   {
@@ -404,7 +448,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Solve Item 7 Here, add more python cells if needed"
+    "import numpy as np \n",
+    "\n",
+    "m = np.array([3.1, 2.8, 2.9, 3.0, 3.2])   \n",
+    "v = np.array([9.9, 10.5, 10.2, 9.6, 9.9])\n",
+    "\n",
+    "m_mean = np.mean(m)\n",
+    "v_mean = np.mean(v)\n",
+    "\n",
+    "u_m = np.std(m, ddof=1)\n",
+    "u_v = np.std(v, ddof=1)\n",
+    "\n",
+    "Ec = 0.5 * m_mean * v_mean**2\n",
+    "\n",
+    "u_Ec = Ec * np.sqrt( (u_m / m_mean)**2 + (2 * u_v / v_mean)**2 )\n",
+    "\n",
+    "print(\"Incertidumbre de la masa \"+str(round(u_m,3))+\" Kg\")\n",
+    "print(\"Incertidumbre de la velocidad \"+str(round(u_v,3))+\"m/s\")\n",
+    "print(\"Energia cinetica promedio \"+str(round(Ec,3))+\"J\")\n",
+    "print(\"Incertidumbre en la Energia cinetica \"+str(round(u_Ec,3))+\"J\")"
    ]
   },
   {
@@ -446,7 +508,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Solve Item 8 Here, add more python cells if needed"
+    "from scipy.integrate import solve_ivp\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "\n",
+    "m, k, c, F = 5, 33, 10, 90\n",
+    "\n",
+    "\n",
+    "def f(t, y):\n",
+    "    x, v = y\n",
+    "    return [v, (F - c*v - k*x)/m]\n",
+    "\n",
+    "\n",
+    "sol = solve_ivp(f, [0, 25], [0, 10], t_eval=np.linspace(0, 25, 300))\n",
+    "\n",
+    "\n",
+    "plt.plot(sol.t, sol.y[0], label='Posición x(t)')\n",
+    "plt.plot(sol.t, sol.y[1], label='Velocidad v(t)')\n",
+    "plt.xlabel('Tiempo [s]')\n",
+    "plt.legend()\n",
+    "plt.grid()\n",
+    "plt.title('Sistema masa-resorte-amortiguador')\n",
+    "plt.show()\n"
    ]
   }
  ],
