--- a/Taller 1/Taller 1 Herramientas.ipynb
+++ b/Taller 1/Taller 1 Herramientas.ipynb
@@ -273,11 +273,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Límite elástico en ε ≈ 1.1556\n",
+      "Límite elástico en ε ≈ 0.0030\n"
+     ]
+    }
+   ],
    "source": [
-    "#Solve Item 4 Here, add more python cells if needed"
+    "import numpy as np\n",
+    "\n",
+    "coef = [26202, -11347, -21936, 67]\n",
+    "\n",
+    "raices = np.roots(coef)\n",
+    "\n",
+    "raices_reales = [r.real for r in raices if np.isreal(r) and r.real > 0]\n",
+    "\n",
+    "for r in raices_reales:\n",
+    "    print(f\"Límite elástico en ε ≈ {r:.4f}\")\n"
    ]
   },
   {
