--- a/Taller 3/Taller 3. Herramientas.ipynb
+++ b/Taller 3/Taller 3. Herramientas.ipynb
@@ -41,12 +41,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\sqrt{\\left(\\frac{a^{\\frac{t}{\\pi}} \\log{\\left(a \\right)} \\sin{\\left(t \\right)}}{\\pi} + a^{\\frac{t}{\\pi}} \\cos{\\left(t \\right)}\\right)^{2} + \\left(\\frac{a^{\\frac{t}{\\pi}} \\log{\\left(a \\right)} \\cos{\\left(t \\right)}}{\\pi} - a^{\\frac{t}{\\pi}} \\sin{\\left(t \\right)}\\right)^{2}}$"
+      ],
+      "text/plain": [
+       "sqrt((a**(t/pi)*log(a)*sin(t)/pi + a**(t/pi)*cos(t))**2 + (a**(t/pi)*log(a)*cos(t)/pi - a**(t/pi)*sin(t))**2)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "import sympy \n",
-    "from sympy import symbols \n"
+    "import sympy as sp\n",
+    "from sympy import symbols \n",
+    "from sympy import sin, cos, pi, sqrt\n",
+    "from sympy import Function \n",
+    "\n",
+    "[t,a]=symbols(\"t,a\")\n",
+    "x=a**(t/pi)*sin(t)\n",
+    "y=a**(t/pi)*cos(t)\n",
+    "dx=x.diff(t)\n",
+    "dy=y.diff(t)\n",
+    "mag=sqrt(dx**2 + dy**2)\n",
+    "mag\n",
+    "\n"
    ]
   },
   {
@@ -95,8 +120,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.11.7"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
