--- a/Taller 3/Taller 3. Herramientas.ipynb
+++ b/Taller 3/Taller 3. Herramientas.ipynb
@@ -41,19 +41,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle \\sqrt{\\left(\\frac{a^{\\frac{t}{\\pi}} \\log{\\left(a \\right)} \\sin{\\left(t \\right)}}{\\pi} + a^{\\frac{t}{\\pi}} \\cos{\\left(t \\right)}\\right)^{2} + \\left(\\frac{a^{\\frac{t}{\\pi}} \\log{\\left(a \\right)} \\cos{\\left(t \\right)}}{\\pi} - a^{\\frac{t}{\\pi}} \\sin{\\left(t \\right)}\\right)^{2}}$"
+       "$\\displaystyle \\frac{\\sqrt{a^{\\frac{2 t}{\\pi}} \\left(\\log{\\left(a \\right)}^{2} + \\pi^{2}\\right)}}{\\pi}$"
       ],
       "text/plain": [
-       "sqrt((a**(t/pi)*log(a)*sin(t)/pi + a**(t/pi)*cos(t))**2 + (a**(t/pi)*log(a)*cos(t)/pi - a**(t/pi)*sin(t))**2)"
+       "sqrt(a**(2*t/pi)*(log(a)**2 + pi**2))/pi"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -62,7 +62,6 @@
     "import sympy as sp\n",
     "from sympy import symbols \n",
     "from sympy import sin, cos, pi, sqrt\n",
-    "from sympy import Function \n",
     "\n",
     "[t,a]=symbols(\"t,a\")\n",
     "x=a**(t/pi)*sin(t)\n",
@@ -70,7 +69,9 @@
     "dx=x.diff(t)\n",
     "dy=y.diff(t)\n",
     "mag=sqrt(dx**2 + dy**2)\n",
-    "mag\n",
+    "mag_s=mag.simplify()\n",
+    "mag_s\n",
+    "\n",
     "\n"
    ]
   },
@@ -86,10 +87,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\frac{\\begin{cases} \\frac{\\pi \\sqrt{a^{\\frac{2 t}{\\pi}} \\left(\\log{\\left(a \\right)}^{2} + \\pi^{2}\\right)}}{\\log{\\left(a \\right)}} & \\text{for}\\: \\log{\\left(a \\right)} \\neq 0 \\\\\\pi t & \\text{otherwise} \\end{cases}}{\\pi}$"
+      ],
+      "text/plain": [
+       "Piecewise((pi*sqrt(a**(2*t/pi)*(log(a)**2 + pi**2))/log(a), Ne(log(a), 0)), (pi*t, True))/pi"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dis=sp.integrate(mag_s,t)\n",
+    "dis"
+   ]
   },
   {
    "cell_type": "markdown",
