Update Taller 5. Herramientas.ipynb

--- a/Taller 5/Taller 5. Herramientas.ipynb
+++ b/Taller 5/Taller 5. Herramientas.ipynb
@@ -40,10 +40,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El porcentaje de a evaluado en t = τ es: 63.2 %\n",
+      "El 63,2% solo se alcanza cuando tau es igual al tiempo por lo que tau también depende del tiempo y de la X. Se verifica con la segunda parte del código dado que se separa la expresión del porcentaje y se llega al resultado de 63,2%. \n"
+     ]
+    }
+   ],
+   "source": [
+    "import sympy as sp\n",
+    "\n",
+    "x, a, t, T = sp.symbols('x a t T')  \n",
+    "expr = a*(1-sp.exp(-t/T))  \n",
+    "t_sol = sp.solve(expr - x, t)[0] \n",
+    "eq_t = sp.Eq(t, t_sol) \n",
+    "eq_t \n",
+    "\n",
+    "porcentaje = (expr/a)*100  \n",
+    "porcentaje_T = float(porcentaje.subs(t, T))  \n",
+    "print(f'El porcentaje de a evaluado en t = τ es: {round(porcentaje_T,1)} %')\n",
+    "\n",
+    "print(\"El 63,2% solo se alcanza cuando tau es igual al tiempo por lo que tau también depende del tiempo y de la X. \" \\\n",
+    "\"Se verifica con la segunda parte del código dado que se separa la expresión del porcentaje y se llega al resultado de 63,2%. \")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -70,6 +94,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El coeficiente de arrastre es de: 17.66\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sympy as sp\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "g,m,cd,t,v=sp.symbols(\"g,m,cd,t,v\") \n",
+    "eq=g*m/cd*(1-sp.E**(-cd*t/m))-v \n",
+    "q=sp.solve(eq,cd) \n",
+    "q_sol=q[0].subs({m:5,g:9.81,v:10/3.6,t:4}) \n",
+    "\n",
+    "print(f\"El coeficiente de arrastre es de: {round(q_sol,2)}\" )"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -92,7 +142,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
