Update Taller 6. Herramientas.ipynb

--- a/Taller 6/Taller 6. Herramientas.ipynb
+++ b/Taller 6/Taller 6. Herramientas.ipynb
@@ -96,6 +96,135 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reacciones en apoyos:\n",
+      "Ax = 0.00\n",
+      "Ay = 1100.00\n",
+      "Dy = 1100.00\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sympy as sp\n",
+    "Ax, Ay, Dy = sp.symbols('Ax Ay Dy')\n",
+    "\n",
+    "#fuerzas\n",
+    "f_g = 800   \n",
+    "f_f = 600   \n",
+    "f_e = 800   \n",
+    "\n",
+    "#coordenadas\n",
+    "A = (0,0)\n",
+    "B = (10,0)\n",
+    "C = (20,0)\n",
+    "D = (30,0)\n",
+    "G = (7.5, 4.3301)\n",
+    "F = (15, 8.6602)\n",
+    "E = (22.5, 4.3301)\n",
+    "\n",
+    "#reacciones en A y D\n",
+    "M_a =sp.Eq(Dy*30-f_f*15-f_g*7.5-f_e*22.5,0)\n",
+    "eq_x=sp.Eq(Ax, 0)\n",
+    "eq_y=sp.Eq(Ay+Dy-f_f-f_g-f_e , 0)\n",
+    "\n",
+    "\n",
+    "sol = sp.solve([eq_x, eq_y, M_a], (Ax, Ay, Dy))\n",
+    "print(\"Reacciones en apoyos:\")\n",
+    "for var, val in sol.items():\n",
+    "    print(f\"{var} = {float(val):.2f}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Resultados:\n",
+      "Ax = 0.00\n",
+      "Ay = 1100.00\n",
+      "Dy = 1100.00\n",
+      "ab = 1905.20\n",
+      "ag = -2200.00\n",
+      "bc = 1212.37\n",
+      "bg = -692.83\n",
+      "bf = 692.83\n",
+      "cf = 692.83\n",
+      "ce = -692.83\n",
+      "cd = 1905.20\n",
+      "gf = -1799.98\n",
+      "fe = -1799.98\n",
+      "ed = -2200.00\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sympy as sp\n",
+    "\n",
+    "ab,ag,bc,bg,bf,cf,ce,cd,gf,fe,ed = sp.symbols('ab ag bc bg bf cf ce cd gf fe ed')\n",
+    "f_g,f_f,f_e = sp.symbols('f_g f_f f_e')  \n",
+    "\n",
+    "eq_Ax = sp.Eq(Ax + ab*1 + ag*0.866, 0)\n",
+    "eq_Ay = sp.Eq(Ay + ag*0.5, 0)\n",
+    "\n",
+    "#nudo b\n",
+    "eq_Bx = sp.Eq(-ab + bc + bg*-0.5 + bf*0.5, 0)\n",
+    "eq_By = sp.Eq(bg*0.866 + bf*0.866, 0)\n",
+    "\n",
+    "#nudo c\n",
+    "eq_Cx = sp.Eq(-bc + cd -0.5*cf +0.5*ce, 0)\n",
+    "eq_Cy = sp.Eq(0.866*cf + 0.866*ce, 0)\n",
+    "\n",
+    "#nudo d\n",
+    "eq_Dx = sp.Eq(-cd -0.866*ed, 0)\n",
+    "eq_Dy = sp.Eq(Dy +0.5*ed, 0)\n",
+    "\n",
+    "#nudo g\n",
+    "eq_Gx = sp.Eq(-0.866*ag+0.5*bg +0.866*gf, 0)\n",
+    "eq_Gy = sp.Eq(-0.5*ag -0.866*bg +0.5*gf - f_g, 0)\n",
+    "\n",
+    "#nudo f\n",
+    "eq_Fx = sp.Eq(-0.5*bf +0.5*cf -0.866*gf +0.866*fe, 0)\n",
+    "eq_Fy = sp.Eq(-0.866*bf -0.866*cf -0.5*gf -0.5*fe - f_f, 0)\n",
+    "\n",
+    "#nudo e\n",
+    "eq_Ex = sp.Eq(-0.5*ce -0.866*fe +0.866*ed, 0)\n",
+    "eq_Ey = sp.Eq(-0.866*ce +0.5*fe -0.5*ed - f_e, 0)\n",
+    "\n",
+    "ecuaciones = [\n",
+    "    eq_Ax, eq_Ay,\n",
+    "    eq_Bx, eq_By,\n",
+    "    eq_Cx, eq_Cy,\n",
+    "    eq_Dx, eq_Dy,\n",
+    "    eq_Gx, eq_Gy,\n",
+    "    eq_Fx, eq_Fy,\n",
+    "    eq_Ex, eq_Ey\n",
+    "]\n",
+    "\n",
+    "\n",
+    "incognitas = [Ax,Ay,Dy,ab,ag,bc,bg,bf,cf,ce,cd,gf,fe,ed]\n",
+    "\n",
+    "valores = {f_g:800, f_f:600, f_e:800}\n",
+    "\n",
+    "ecuaciones_num = [eq.subs(valores) for eq in ecuaciones]\n",
+    "sol = sp.solve(ecuaciones_num, incognitas)\n",
+    "\n",
+    "print(\"Resultados:\")\n",
+    "for var in incognitas:\n",
+    "    print(f\"{var} = {sol[var].evalf():.2f}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -118,7 +247,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
