--- a/Taller 7/Taller 7. Herramientas.ipynb
+++ b/Taller 7/Taller 7. Herramientas.ipynb
@@ -97,10 +97,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Resultado de la optimización:\n",
+      "Valor óptimo de x:50.00\n",
+      "Valor óptimo de y:0.00\n",
+      "Valor óptimo de z:0.00\n",
+      "Valor óptimo de la función objetivo:3000000.00\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scipy.optimize import linprog\n",
+    "\n",
+    "c = [-60000, -30000,-78000]\n",
+    "\n",
+    "A=[[0,2,3],[3,2,1],[4,4,6],[0,0,2]]\n",
+    "\n",
+    "B=[50,200,200,100]\n",
+    "\n",
+    "x_bounds = (0, None)\n",
+    "y_bounds = (0, None)\n",
+    "z_bounds=(0,None)\n",
+    "\n",
+    "result = linprog(c, A_ub=A, b_ub=B, bounds=[x_bounds, y_bounds,z_bounds])\n",
+    "\n",
+    "print(\"Resultado de la optimización:\")\n",
+    "print(\"Valor óptimo de x:{:1.2f}\".format(result.x[0]))\n",
+    "print(\"Valor óptimo de y:{:1.2f}\".format(result.x[1]))\n",
+    "print(\"Valor óptimo de z:{:1.2f}\".format(result.x[2]))\n",
+    "print(\"Valor óptimo de la función objetivo:{:1.2f}\".format(-result.fun)) \n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -110,6 +142,43 @@
     "### <span style=\"color: #1AA3D9\"><center> Item 2: Minimización\n",
     "\n",
     "Una fábrica produce latas de 355cm<sup>3</sup>. Hacer la tapa superior de las latas cuesta 0.5USD/cm<sup>2</sup>, mientras que hacer el resto de la lata cuesta 0.12USD/cm<sup>2</sup>.  Encuentre la longitud y el diámetro de la lata que minimiza el costo de la lata."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (3891042505.py, line 12)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[26], line 12\u001b[1;36m\u001b[0m\n\u001b[1;33m    constraints={\"type\":\"eq\",\"fun\":lambda x: x[0]*x[1]*np.pi=0 }\u001b[0m\n\u001b[1;37m                                                            ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "from scipy.optimize import minimize\n",
+    "\n",
+    "\n",
+    "# Definir la función objetivo\n",
+    "def objective_function(x):\n",
+    "    f =np.pi*((0.5*x[0])**(2))*0.12*x[1]\n",
+    "    return f\n",
+    "\n",
+    "initial_guess = 0\n",
+    "\n",
+    "constraints={\"type\":\"eq\",\"fun\":lambda x: x[0]*x[1]*np.pi=0 }\n",
+    "\n",
+    "\n",
+    "# Resolver el problema de optimización\n",
+    "result = minimize(objective_function, initial_guess, bounds=[(0, 355)])\n",
+    "\n",
+    "# Imprimir el resultado\n",
+    "print(\"El mínimo de la función se encuentra en x =\", result.x[0])\n",
+    "print(\"El valor mínimo de la función es f(x) =\", result.fun)"
    ]
   },
   {
@@ -127,8 +196,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.11.7"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
